<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/primary"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/dark_gray"
        android:textSize="36sp"
        android:letterSpacing="0.05"
        android:fontFamily="sans-serif-condensed-medium"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:srcCompat="@drawable/planet_saturn_svgrepo_com"
        app:tint="@color/dark_gray"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="16dp"
        android:background="@drawable/input">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:textSize="36sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="?android:textColorPrimary"/>

            <EditText
                android:id="@+id/email_text"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/input"
                android:drawableStart="@drawable/ic_outline_email_24"
                android:drawablePadding="8dp"
                android:hint="@string/email"
                android:padding="8dp"
                android:textColor="@color/black"
                android:layout_marginTop="30dp"/>

            <EditText
                android:id="@+id/password_text"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/input"
                android:drawableStart="@drawable/ic_outline_lock_24"
                android:drawablePadding="8dp"
                android:hint="@string/password"
                android:padding="8dp"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:layout_marginTop="20dp"/>

            <Button
                android:id="@+id/signin_button"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/sign_in"
                android:textSize="18sp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/primary"
                android:textColor="?android:textColorPrimary"
                app:cornerRadius = "15dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/signup_hint"
                    android:textSize="16sp"
                    android:textColor="?android:textColorPrimary"
                    android:layout_marginEnd="7dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up"
                    android:id="@+id/signup_text"
                    android:clickable="true"
                    android:focusable="true"
                    android:textSize="16sp"
                    android:textColor="@color/primary" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>
