<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/cart_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/my_cart"
        android:textAlignment="center"
        android:textColor="?android:textColorPrimary"
        android:textStyle="bold"
        android:textSize="22sp"
        android:padding="14dp"
        android:layout_alignParentTop="true"/>

    <TextView
        android:id="@+id/no_items_text"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:text="@string/cart_empty_hint"
        android:textAlignment="center"
        android:textColor="?android:textColorSecondary"
        android:textSize="22sp"
        android:layout_centerInParent="true"
        android:visibility="gone"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/order_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="8dp"
        android:layout_below="@id/cart_title"
        android:layout_above="@id/cart_details"/>

    <LinearLayout
        android:id="@+id/cart_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="14dp"
        android:paddingBottom="14dp"
        android:paddingTop="8dp"
        android:layout_alignParentBottom="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="7dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:text="@string/items"
                android:textColor="?android:textColorSecondary"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/items_total_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:textColor="?android:textColorPrimary"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:text="04" />

        </RelativeLayout>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="7dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total"
                android:textSize="18sp"
                android:textColor="?android:textColorSecondary"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"/>

            <TextView
                android:id="@+id/price_total_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:textColor="?android:textColorPrimary"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:text="$45.50" />

        </RelativeLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/checkout_button"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:text="@string/checkout"
            android:textSize="20sp"
            android:backgroundTint="@color/primary"
            android:textColor="@color/dark_gray"
            app:cornerRadius="15dp"/>

    </LinearLayout>

</RelativeLayout>
