<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CheckoutActivity">

    <RelativeLayout
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginVertical="16dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="16dp"
        android:layout_alignParentTop="true">

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_baseline_arrow_back_24"
            android:scaleType="fitXY"
            android:background="@null"
            app:tint="?android:textColorPrimary"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"/>

        <TextView
            android:id="@+id/cart_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="Checkout"
            android:textAlignment="center"
            android:textColor="?android:textColorPrimary"
            android:textSize="22sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Full name"
        android:layout_margin="16dp"
        app:startIconDrawable="@drawable/ic_outline_person_24"
        android:layout_below="@id/top_bar">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/address"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="16dp"
        app:startIconDrawable="@drawable/ic_baseline_location_on_24"
        android:layout_below="@id/name">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone_number"
        android:layout_marginHorizontal="16dp"
        app:startIconDrawable="@drawable/ic_baseline_phone_24"
        android:layout_below="@id/address">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="15"
            android:inputType="phone"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/order_button"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:text="@string/place_order"
        android:textSize="20sp"
        android:layout_margin="16dp"
        android:backgroundTint="@color/primary"
        android:textColor="@color/dark_gray"
        app:cornerRadius="15dp"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>
