<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/account"
            android:textAlignment="center"
            android:textColor="?android:textColorPrimary"
            android:textStyle="bold"
            android:textSize="22sp"
            android:padding="14dp"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/option_orders"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="6dp"
            app:cardElevation="5dp"
            app:cardPreventCornerOverlap="true"
            app:cardCornerRadius="12dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="4dp">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:scaleType="fitXY"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:padding="12dp"
                    android:src="@drawable/ic_outline_format_list_bulleted_24"
                    app:tint="?android:textColorPrimary" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/view_orders"
                    android:layout_marginStart="55dp"
                    android:layout_centerVertical="true"
                    android:textColor="?android:textColorPrimary"
                    android:textSize="18sp" />

                <ImageView
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:scaleType="fitXY"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:padding="12dp"
                    android:src="@drawable/ic_baseline_navigate_next_24"
                    app:tint="?android:textColorPrimary" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/option_signout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:cardElevation="5dp"
            app:cardPreventCornerOverlap="true"
            app:cardCornerRadius="12dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="4dp">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:padding="11dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_baseline_output_24"
                    app:tint="?android:textColorPrimary"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="55dp"
                    android:text="@string/sign_out"
                    android:textColor="?android:textColorPrimary"
                    android:textSize="18sp" />

                <ImageView
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:scaleType="fitXY"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:padding="12dp"
                    android:src="@drawable/ic_baseline_navigate_next_24"
                    app:tint="?android:textColorPrimary" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</RelativeLayout>
